# dsl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: depth_generator_from_map.h  dsl_common.h
include/full_system/: coarse_distance_map.h  coarse_tracker.h  distance_initializer.h  ef_struct.h  full_system.h  hessian_blocks.h  immature_point.h  marginalization_residual.h  optimization_call_back.h  pixel_selector.h  residual.h  residual_projection.h
include/map_render/: csv.h  data_loader.h  gui.h  map_render.h  pangolin_utils.h  pcl_utils.h  yaml_loader.h
include/map_render/core/: global_model.h  gpu_texture.h  index_map.h
include/map_render/shaders/: color.glsl  combo_splat_cata.frag  data.geom  data.vert  depth_splat_cata.frag  draw_feedback.vert  draw_surface.frag  draw_surface.geom  draw_surface.vert  feedback_buffer.h  fov.glsl  index_global_map.frag  index_global_map.vert  index_global_map_cata.geom  index_map_cata.vert  init_unstable.vert  intensity_splat_cata.frag  parse.h  shaders.h  splat_cata.vert  surfels.glsl  uniform.h  update_with_pose.vert  vertex.h  visualise_textures.frag
include/optimization/: ab_local_parameterization.h  homo_cost_functor.h  marginalization_factor.h  matrix_accumulators.h  parameter_map.h  photo_cost_functor.h  se3_local_parameterization.h  se3_prior_cost_functor.h
include/relocalization/: boost_archiver.h  converter.h  desc_map.h  desc_map_viewer.h  feature_extractor.h  feature_matcher.h  pnp_solver.h  relocalization_config.h  relocalization_struct.h  sp_extractor.h  sp_matcher.h  vocabulary_binary.h
include/relocalization/reloc_optimization/: optimizer.h  reprojection_functor.h  surfel_reprojection_functor.h
include/relocalization/struct/: clique.h  frame.h  key_frame_database.h  map_point.h  motion_estimator.h  net_vlad_utils.h  virtual_frame.h  vlad_database.h
include/relocalization/visualization/: drawer.h
include/tool/: cv_helper.h  dataset_converter.h  euroc_reader.h  habitat_sim_reader.h  new_tsukuba_reader.h
include/util/: frame_shell.h  global_calib.h  global_funcs.h  graph_utils.h  image_and_exposure.h  index_thread_reduce.h  minimal_image.h  num_type.h  settings.h  timing.h  util_common.h
scripts/: extract_images_timestamp.py  pre_process_hkust.py  tum2csv.py
src/: CMakeLists.txt  colorizer.cc  depth_generator.cc  depth_generator_from_map.cc  desc_map_builder.cc  desc_map_clique.cc  desc_map_keyframe.cc  dsl_full_main.cc  dsl_main.cc
src/full_system/: CMakeLists.txt  coarse_distance_map.cc  coarse_tracker.cc  distance_initializer.cc  ef_struct.cc  full_system.cc  full_system_activate_points.cc  full_system_marginalize.cc  full_system_optimize.cc  full_system_tracing.cc  full_system_tracking.cc  hessian_blocks.cc  immature_point.cc  optimization_call_back.cc  pixel_selector.cc  residual.cc
src/map_render/: CMakeLists.txt  data_loader.cc  gui.cc  pangolin_utils.cc  pcl_utils.cc  yaml_loader.cc
src/map_render/core/: global_model.cc  gpu_texture.cc  index_map.cc
src/map_render/shaders/: feedback_buffer.cc  parse.cc  vertex.cc
src/optimization/: CMakeLists.txt  homo_cost_functor.cc  marginalization_factor.cc  parameter_map.cc  photo_cost_functor.cc  se3_prior_cost_functor.cc
src/relocalization/: CMakeLists.txt  converter.cc  desc_map.cc  desc_map_optimizer.cc  desc_map_unused.cc  desc_map_updater.cc  desc_map_viewer.cc  feature_extractor.cc  feature_matcher.cc  pnp_solver.cc  relocalization_config.cc  sp_extractor.cc  sp_matcher.cc  vocabulary_binary.cc
src/relocalization/reloc_optimization/: optimizer.cc  reprojection_functor.cc  surfel_reprojection_functor.cc
src/relocalization/struct/: clique.cc  frame.cc  key_frame_database.cc  map_point.cc  motion_estimator.cc  net_vlad_utils.cc  virtual_frame.cc  vlad_database.cc
src/relocalization/visualization/: drawer.cc
src/tool/: CMakeLists.txt  cv_helper.cc  dataset_converter.cc  euroc_reader.cc  habitat_sim_reader.cc  new_tsukuba_reader.cc
src/util/: CMakeLists.txt  global_calib.cc  graph_utils.cc  settings.cc  timing.cc
support_files/: .gitignore
test/: CMakeLists.txt  ceres_test.cc  coarse_tracker_test.cc  dbow2_test.cc  decomposition_test.cc  desc_map_vis.cc  euroc_test.cc  front_end_test.cc  img_test.cc  mt_test.cc  netvlad_test.cc  optimization_test.cc  ref_test.cc  render_test.cc  sp_test.cc
